test/tests/compiler/18_structures/invalid_parse/misplaced_storage_class.plx
type struc s(a: i32)

# storage class specifier can't come between struct keyword and tag
pub foo: struc data s;
